test/fixtures/errors/events_unhandled_error_common_trace.snapshot
node:events:*
      throw er; // Unhandled 'error' event
      ^

Error: foo:bar
    at bar (<project-root>/test/fixtures/errors/events_unhandled_error_common_trace.js:*:*)
    at foo (<project-root>/test/fixtures/errors/events_unhandled_error_common_trace.js:*:*)
Emitted 'error' event at:
    at quux (<project-root>/test/fixtures/errors/events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (<project-root>/test/fixtures/errors/events_unhandled_error_common_trace.js:*:*)

Node.js <node-version>
